# BeagleboneMusicQueue

./: .gitignore  CMakeLists.txt  CMakeSettings.json
src/: Main.cpp  Main.h  ModuleInterface.h
src/Logging/: Logger.cpp  Logger.h  easylogging++.h
src/Networking/: Server.cpp  Server.h
